[project]
name = "echo-rslv-xyz"
version = "0.2.1"
description = "A HTTP reflection for testing purposes."
authors = [{ name = "datadave", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "GPL-3.0"
dependencies = ["fastapi>=0.110.0,<0.111"]

[project.scripts]
httpeg = "echo.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "uvicorn>=0.29.0,<0.30",
]

[tool.hatch.build.targets.sdist]
include = ["echo"]

[tool.hatch.build.targets.wheel]
include = ["echo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry_bumpversion.file."echo/__init__.py"]
