[project]
version = "0.3.1"
name = "echo-rslv-xyz"
description = "A HTTP reflection for testing purposes."
authors = [{ name = "datadave", email = "605409+datadavev@users.noreply.github.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "GPL-3.0"
dependencies = ["fastapi>=0.110.0"]

[project.scripts]
httpeg = "echo.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "ruff>=0.12.11",
    "uvicorn>=0.29.0",
]

[tool.hatch.build.targets.sdist]
include = ["echo"]

[tool.hatch.build.targets.wheel]
include = ["echo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

[tool.ruff.format]
# 5. Use single quotes in `ruff format`.
quote-style = "single"

[tool.bumpversion]
current_version = "0.3.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
pre_commit_hooks = ["uv sync", "git add uv.lock"]
commit_args = ""

[[tool.bumpversion.files]]
filename = 'echo/__init__.py'
search = "__date__ = '\\d{{4}}-\\d{{2}}-\\d{{2}}'"
replace = "__date__ = '{now:%Y-%m-%d}'"
regex = true

[[tool.bumpversion.files]]
filename = 'echo/__init__.py'
